// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reportback Item basic snapshot test 1`] = `
<Figure
  alt="A Doer's photo"
  image={null}
  imageClassName={null}
>
  <ReportbackFigure
    alignment="right"
    className="padded"
    media={null}
    meta={null}
    size={null}
    verticalAlignment={null}
  >
    <h4>
      A Doer
    </h4>
  </ReportbackFigure>
</Figure>
`;

exports[`Reportback Item snapshot test 1`] = `
<Figure
  alt="Luke Skywalker's photo"
  image="https://static1.comicvine.com/uploads/original/11118/111184078/5124660-6531264806-22292.jpg"
  imageClassName={null}
>
  <ReportbackFigure
    alignment="right"
    className="padded"
    media={
      <Reaction
        active={true}
        onToggleOff={[Function]}
        onToggleOn={[Function]}
        total={30}
      />
    }
    meta={
      <p
        className="italic"
      >
        Some awesmome caption
      </p>
    }
    size={null}
    verticalAlignment={null}
  >
    <h4>
      Luke Skywalker
    </h4>
    <p
      className="footnote italic"
    >
      20
       
      lightsabers
    </p>
  </ReportbackFigure>
</Figure>
`;
